--- a/src/ts/components/shopify-cart/shopify-cart.component.scss
+++ b/src/ts/components/shopify-cart/shopify-cart.component.scss
@@ -26,7 +26,7 @@ rv-shopify-cart {
     .img-wrapper {
       max-width: 100px;
       position: relative;
-      rv-icon {
+      bs4-icon {
         position: absolute;
         top: 0;
         right: 0;
