--- a/theme/sections/cookie-banner.liquid
+++ b/theme/sections/cookie-banner.liquid
@@ -3,7 +3,7 @@
     <div class="row d-flex align-items-center">
       <div class="col-auto d-none d-md-flex">
         <button class="btn btn-link d-flex align-items-center" rv-on-click="close">
-          <rv-icon rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="16"></rv-icon>
+          <bs4-icon rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="16"></bs4-icon>
         </button>
       </div>
       <div class="col-12 col-md text-md-right d-flex align-items-center justify-content-end pt-3 pt-md-0">
