--- a/theme/snippets/product-collection-grid-item-col-ratio-3by4.liquid
+++ b/theme/snippets/product-collection-grid-item-col-ratio-3by4.liquid
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="col-2 d-flex justify-content-end mb-3">
-            <rv-icon class="mr-2 mb-2 cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="24" rv-on-click="toggleDetailMenu"></rv-icon>
+            <bs4-icon class="mr-2 mb-2 cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="24" rv-on-click="toggleDetailMenu"></bs4-icon>
           </div>
         </div>
 
