--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -57,7 +57,7 @@
           </div>
 
           <a class="nav-item nav-link py-0 d-flex justify-content-center" rv-route-class-active="'/pages/fassbender'" rv-route="'/pages/fassbender'">
-            <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-eye.svg' | asset_url }}'" height="26" width="26"></rv-icon>
+            <bs4-icon class="cursor-pointer" rv-src="'{{ 'iconset-eye.svg' | asset_url }}'" height="26" width="26"></bs4-icon>
           </a>
 
         </nav>
@@ -123,31 +123,31 @@
 <div class="container-fluid d-block d-lg-none bg-white fixed-bottom smartphone-menu-buttom">
   <div class="row">
     <a class="col d-flex justify-content-center py-2" rv-route-class-active="'/collections/all'" rv-route="'/collections/all'">
-      <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-eye.svg' | asset_url }}'" height="32" width="32"></rv-icon>
+      <bs4-icon class="cursor-pointer" rv-src="'{{ 'iconset-eye.svg' | asset_url }}'" height="32" width="32"></bs4-icon>
     </a>
 
     <div class="col d-flex justify-content-center py-2" rv-class-active="fullscreenMenuOpen" rv-on-click="assign | args 'fullscreenMenuOpen' true" rv-hide="fullscreenMenuOpen">
-      <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-menu.svg' | asset_url }}'" height="32" width="32"></rv-icon>
+      <bs4-icon class="cursor-pointer" rv-src="'{{ 'iconset-menu.svg' | asset_url }}'" height="32" width="32"></bs4-icon>
     </div>
 
     <div class="col d-flex justify-content-center py-2" rv-class-active="fullscreenMenuOpen" rv-on-click="assign | args 'fullscreenMenuOpen' false" rv-show="fullscreenMenuOpen">
-      <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" height="32" width="32"></rv-icon>
+      <bs4-icon class="cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" height="32" width="32"></bs4-icon>
     </div>
 
     <div class="col d-flex justify-content-center py-2">
       <rv-shopify-cart-button>
         <a role="button" class="d-flex text-decoration-normal" rv-on-click="toggle" rv-route-class-active="'/cart'" href="/cart">
           <div class="closed" rv-class-pending="pending" rv-animate-added="startAddAnimation">
-            <rv-icon
+            <bs4-icon
               class="cursor-pointer"
               rv-src="'{{ 'iconset-shopping-bag.svg' | asset_url }}'"
               height="32"
               width="32"
-            ></rv-icon>
+            ></bs4-icon
             <small class="cart-item-count text-center" rv-text="cartItemCount"></small>
           </div>
           <div class="open">
-            <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" height="32" width="32"></rv-icon>
+            <bs4-icon class="cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" height="32" width="32"></bs4-icon>
           </div>
         </a>
       </rv-shopify-cart-button>
@@ -231,7 +231,7 @@
 
     <div class="pt-3">
       <a class="nav-link" href="/search" rv-route-class-active="'/search'" rv-route="'/search'">
-        <rv-icon rv-src="'{{ 'iconset-glass.svg' | asset_url }}'" size="32"></rv-icon>
+        <bs4-icon rv-src="'{{ 'iconset-glass.svg' | asset_url }}'" size="32"></bs4-icon>
       </a>
     </div>
   </div>
