--- a/theme/snippets/jumplink-shopping-cart-list-items.liquid
+++ b/theme/snippets/jumplink-shopping-cart-list-items.liquid
@@ -3,7 +3,7 @@
 
     <div class="img-wrapper img-fluid mr-3 embed-responsive embed-responsive-3by4">
       <img loading="lazy" class="embed-responsive-item lazy" rv-shopify-img="item.image" rv-alt="item.title">
-      <rv-icon class="m-2 cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="16" rv-on-click="remove | args item %item%"></rv-icon>
+      <bs4-icon class="m-2 cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="16" rv-on-click="remove | args item %item%"></bs4-icon>
     </div>
     
     <div class="media-body">
