--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -138,7 +138,7 @@
 
           {%- comment -%} Smartphone: Show Close Button {%- endcomment -%}
           <div class="col-12 d-flex d-lg-none justify-content-end">
-            <rv-icon class="ml-3 my-2" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="24" rv-on-click="toggleDetailMenu"></rv-icon>
+            <bs4-icon class="ml-3 my-2" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="24" rv-on-click="toggleDetailMenu"></bs4-icon>
           </div>
         </div>
         <div class="row justify-content-center text-center">
@@ -165,7 +165,7 @@
 
           {%- comment -%} Desktop: Show Close Button {%- endcomment -%}
           <div class="col-12 d-none d-lg-flex justify-content-end" rv-show="showDetailMenu">
-            <rv-icon class="mx-3 mt-3" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="24" rv-on-click="toggleDetailMenu"></rv-icon>
+            <bs4-icon class="mx-3 mt-3" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" size="24" rv-on-click="toggleDetailMenu"></bs4-icon>
           </div>
 
           {%- comment -%} Desktop: Show Menu Button {%- endcomment -%}
