--- a/theme/templates/blog.liquid
+++ b/theme/templates/blog.liquid
@@ -1,8 +1,8 @@
 {% paginate blog.articles by 10 %}
-  <div {% comment %} FIXME rv-view='{"listenAllLinks": false, "containerSelector": "#blog-pagination", "scrollToTop": false, "action": "append", "datasetToModel": false}'{% endcomment %} id="blog-pagination">
+  <router-view id="blog-pagination" listen-all-links="false" dataset-to-model="false" parse-title="false" scroll-to-top="false" prefetch-links="true" action="append">
     {% for article in blog.articles %}
       {% include 'jumplink-article-list-item' %}
     {% endfor %}
     {% include 'jumplink-pagination' with viewId: 'blog-pagination' %}
-  </div>
+  </router-view>
 {% endpaginate %}
