--- a/theme/templates/collection.lookbook.liquid
+++ b/theme/templates/collection.lookbook.liquid
@@ -1,4 +1,4 @@
-<div class="container-fluid" {% comment %} FIXME rv-view='{"listenAllLinks": false, "containerSelector": "#products-pagination", "scrollToTop": false, "action": "append", "datasetToModel": false}'{% endcomment %} id="products-pagination">
+<router-view id="products-pagination" class="container-fluid" listen-all-links="false" dataset-to-model="false" parse-title="false" scroll-to-top="false" prefetch-links="true" action="append">
   {% paginate collection.products by 40 %}
     <div class="row">
       {% for product in collection.products %}
@@ -9,4 +9,4 @@
       </div>
     </div>
   {% endpaginate %}
-</div>
+</router-view>
