chore: Replaced webpack with vite

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,11 +3,11 @@
 @import 'bootstrap';
 
 // Riba
-@import "~@ribajs/bs4/src/index";
-@import "~@ribajs/i18n/src/index";
-@import "~@ribajs/shopify/src/index";
-@import "~@ribajs/shopify-tda/src/index";
-@import "~@ribajs/core/src/index";
+@import "@ribajs/bs4/src/index";
+@import "@ribajs/i18n/src/index";
+@import "@ribajs/shopify/src/index";
+@import "@ribajs/shopify-tda/src/index";
+@import "@ribajs/core/src/index";
 
 
 // custom extensions
