--- a/src/ts/components/shopify-cart/shopify-cart.component.scss
+++ b/src/ts/components/shopify-cart/shopify-cart.component.scss
@@ -14,7 +14,7 @@
   }
 }
 
-rv-shopify-cart {
+fsbdr-shopify-cart {
   user-select: none;
   .shopping-cart-dropdown-footer,
   .shopping-cart-dropdown-header,
