--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -135,7 +135,7 @@
     </div>
 
     <div class="col d-flex justify-content-center py-2">
-      <rv-shopify-cart-button>
+      <fsbdr-shopify-cart-button>
         <a role="button" class="d-flex text-decoration-normal" rv-on-click="toggle" rv-route-class-active="'/cart'" href="/cart">
           <div class="closed" rv-class-pending="pending" rv-animate-added="startAddAnimation">
             <bs4-icon
@@ -150,7 +150,7 @@
             <bs4-icon class="cursor-pointer" rv-src="'{{ 'iconset-x.svg' | asset_url }}'" height="32" width="32"></bs4-icon>
           </div>
         </a>
-      </rv-shopify-cart-button>
+      </fsbdr-shopify-cart-button>
     </div>
 
   </div>
