--- a/theme/templates/page.privacy-settings.liquid
+++ b/theme/templates/page.privacy-settings.liquid
@@ -7,9 +7,9 @@
       </div>
     {% unless page.content == blank %}
       <div class="col-12 col-md-8 offset-md-2 col-lg-8 col-xl-6 rte" rv-i18n-html="">
-        {{page.content}}
-        <template lang="default">{{page.content}}</template>
-        <template lang="de">{{page.metafields["global"]["de-content"]}}</template>
+        {{ page.content | default: page.metafields["global"]["en-content"]}}
+        <template lang="default">{{ page.content | default: page.metafields["global"]["en-content"]}}</template>
+        <template lang="de">{{ page.metafields["global"]["de-content"] | default: page.content }}</template>
       </div>
     {% endunless %}
     <div class="col-12 col-md-8 offset-md-2 col-lg-8 col-xl-6 pt-3">
