--- a/theme/templates/page.contact.liquid
+++ b/theme/templates/page.contact.liquid
@@ -9,9 +9,9 @@
     </div>
 
     <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte" rv-i18n-html="">
-      {{page.content}}
-      <template lang="default">{{page.content}}</template>
-      <template lang="de">{{page.metafields["global"]["de-content"]}}</template>
+      {{ page.content | default: page.metafields["global"]["en-content"]}}
+      <template lang="default">{{ page.content | default: page.metafields["global"]["en-content"]}}</template>
+      <template lang="de">{{ page.metafields["global"]["de-content"] | default: page.content }}</template>
     </div>
   </div>
 </div>
