--- a/theme/templates/page.privacy.liquid
+++ b/theme/templates/page.privacy.liquid
@@ -2,9 +2,9 @@
   <div class="row pt-md-5">
     {% unless page.content == blank %}
       <div class="col-12 col-md-8 offset-md-2 col-lg-8 col-xl-6 scrollbar-x-auto rte" rv-i18n-html="">
-        {{page.content}}
-        <template lang="default">{{page.content}}</template>
-        <template lang="de">{{page.content}}</template>
+        {{ page.content | default: page.metafields["global"]["en-content"]}}
+        <template lang="default">{{ page.content | default: page.metafields["global"]["en-content"]}}</template>
+        <template lang="de">{{ page.content | default: page.metafields["global"]["en-content"]}}</template>
       </div>
     {% endunless %}
 
