--- a/theme/templates/page.without-title.liquid
+++ b/theme/templates/page.without-title.liquid
@@ -1,9 +1,9 @@
 <div class="container-fluid pt-5" id="page-{{ page.handle }}">
   <div class="row pt-md-5 scrollbar-x-auto">
     <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte" rv-i18n-html="">
-      {{page.content}}
-      <template lang="default">{{page.content}}</template>
-      <template lang="de">{{page.metafields["global"]["de-content"]}}</template>
+      {{ page.content | default: page.metafields["global"]["en-content"]}}
+      <template lang="default">{{ page.content | default: page.metafields["global"]["en-content"]}}</template>
+      <template lang="de">{{ page.metafields["global"]["de-content"] | default: page.content }}</template>
     </div>
   </div>
 </div>
