--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="{{'html.lang.code' |t}}">
-<head class="no-js">
+<head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="theme-color" content="#D9998F">
